--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 
     <title>colosovo</title>
 
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <style>
         /* Add some basic styling for the image container */
         .header-image-container {
             max-width: 100%;
             overflow: hidden;
-            text-align: left;
+            text-align: center;
         }
 
         /* Set the image dimensions */
@@ -46,7 +45,7 @@
 
     <!--header image-->
     <div class="header-image-container">
-        <img src="{% static 'header_image.jpeg' %}" alt="Header Image">
+        <img src=static/header_image.jpeg alt="Header Image">
     </div>
 
     <!--toolbar under image-->
@@ -96,10 +95,9 @@
                     <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         чат
                     </button>
-                    <ul class="dropdown-menu" style="">
-                    <li><a class="dropdown-item" href="https://web.telegram.org/a/#-1001847091800">телеграм в веб</a></li>
-                    <li><a class="dropdown-item" href="https://t.me/chat_colosovo">телеграм в приложение</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://web.telegram.org/a/#-1001847091800" target="_blank">телеграм в веб</a></li>
+                    <li><a class="dropdown-item" href="https://t.me/chat_colosovo" target="_blank">телеграм в приложение</a></li>
                     </ul>
                 </div>
 
@@ -108,10 +106,10 @@
                     <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         группы
                     </button>
-                    <ul class="dropdown-menu" style="">
-                    <li><a class="dropdown-item" href="https://ok.ru/kolosyni">OK.Всем Колосянaм сюда</a></li>
-                    <li><a class="dropdown-item" href="https://ok.ru/group/55377043521558">OK.дом культуры(п.Колосово)</a></li>
-                    <li><a class="dropdown-item" href="https://vk.com/club223675371">VK.Колосово</a></li>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://ok.ru/kolosyni" target="_blank">OK.Всем Колосянaм сюда</a></li>
+                    <li><a class="dropdown-item" href="https://ok.ru/group/55377043521558" target="_blank">OK.дом культуры(п.Колосово)</a></li>
+                    <li><a class="dropdown-item" href="https://vk.com/club223675371" target="_blank">VK.Колосово</a></li>
                     </ul>
                 </div>
 
@@ -120,8 +118,8 @@
                     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         events/news
                     </button>
-                    <ul class="dropdown-menu" style="">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://tv.pgtrk.com/ru/news">Action</a></li>
                     <li><a class="dropdown-item" href="#">Another action</a></li>
                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
@@ -144,6 +142,6 @@
         </div>
     </nav>
 
-    {% bootstrap_javascript %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
