--- a/index.html
+++ b/index.html
@@ -26,13 +26,22 @@
         /* Style for the toolbar */
         .toolbar {
             display: flex;
-            justify-content: space-between;
+            flex-wrap: wrap;
+            justify-content: center;
             margin-top: 10px;
         }
 
         /* Style for the dropdown buttons */
         .dropdown {
             margin: 0 5px;  /* Add margin between buttons */
+        }
+
+        /* Adjust footer styling */
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: #f8f9fa;
         }
 
     </style>
@@ -188,12 +197,12 @@
         </div>
     </nav>
 
-<!-- Add a standard footer -->
-<footer class="footer mt-auto py-3 bg-light fixed-bottom w-100">
-    <div class="container d-flex justify-content-center">
-        <span class="text-muted">2023 колосово</span>
-    </div>
-</footer>
+    <!-- Add a standard footer -->
+    <footer class="footer mt-auto py-3 bg-light fixed-bottom w-100">
+        <div class="container d-flex justify-content-center">
+            <span class="text-muted">2023 колосово</span>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
