--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 
     <!-- Add a standard footer -->
     <footer class="footer mt-auto py-3 bg-light fixed-bottom w-100">
-        <div class="container d-flex justify-content-center">
+        <div class="container d-flex justify-content-between align-items-center">
             <span class="text-muted">2023 колосово</span>
-            <!-- <a class="btn btn-outline-dark" href="https://t.me/ruvamd" targer="_blank">обратная связь</a> -->
+            <a class="btn btn-outline-dark ms-auto" href="https://t.me/ruvamd" targer="_blank">обратная связь</a>
         </div>
     </footer>
 
